--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,18 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@layer tailwind-base, primereact, tailwind-utilities;
+
+/* IMPORTANT: Styled mode you must add the PrimeReact Theme here. Do not include in unstyled mode */
+
+
+@layer tailwind-base {
+  @tailwind base;
+}
+
+@layer tailwind-utilities {
+  @tailwind components;
+  @tailwind utilities;
+}
+
+
 
 body {
   margin: 0;
