Wyswietlanie na dashboardzie temperatury i wilgotnosci jezeli czujnik jest dodany i jest aktywny

--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,27 @@
 
 @layer tailwind-base, primereact, tailwind-utilities;
 
-/* IMPORTANT: Styled mode you must add the PrimeReact Theme here. Do not include in unstyled mode */
 
+
+.material-icons {
+  font-family: 'Material Icons';
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px;  
+  display: inline-block;
+  line-height: 1;
+  text-transform: none;
+  letter-spacing: normal;
+  word-wrap: normal;
+  white-space: nowrap;
+  direction: ltr;
+
+
+  -webkit-font-smoothing: antialiased;
+  text-rendering: optimizeLegibility;
+  -moz-osx-font-smoothing: grayscale;
+  font-feature-settings: 'liga';
+}
 
 @layer tailwind-base {
   @tailwind base;
