--- a/src/index.css
+++ b/src/index.css
@@ -75,3 +75,6 @@ code {
 .p-stepper .p-stepper-panels {
   background: unset;
 }
+.menu-bg-transparent .p-menuitem-link{
+  background-color: transparent;
+}
