Dodawanie historii przy dolaczaniu do domu, wyswietlanie informacji na dashboardzie

--- a/src/index.css
+++ b/src/index.css
@@ -78,3 +78,6 @@ code {
 .menu-bg-transparent .p-menuitem-link{
   background-color: transparent;
 }
+.p-datatable-emptymessage{
+  background-color: transparent;
+}
